--- a/nuvoicp/Makefile.rpi
+++ b/nuvoicp/Makefile.rpi
@@ -27,5 +27,7 @@ nuvoicp: main.o icp.o $(DEV_OBJ)
 	$(CC) $(CFLAGS) -o nuvoicp $^ $(LDFLAGS)
 shared: main.o icp.o $(DEV_OBJ)
 	$(CC) $(CFLAGS) -shared -o libnuvoicp-$(LIBNAME).so $^ $(LDFLAGS)
+test: itest.o icp.o $(DEV_OBJ)
+	$(CC) $(CFLAGS) -o itest $^ $(LDFLAGS)
 clean:
 	rm -f nuvoicp *.o libnuvoicp-*.so
