--- a/nuvoicp/Makefile
+++ b/nuvoicp/Makefile
@@ -1,5 +1,5 @@
 CC = gcc
-CFLAGS = -g -Wall
+CFLAGS = -g -Wall -DPRINT_CONFIG_EN -DDYNAMIC_DELAY
 
 #LDFLAGS = -lgpiod
 DEV_OBJ = stub.o
@@ -8,9 +8,10 @@ default: all
 
 all: nuvoicp shared
 nuvoicp: main.o icp.o $(DEV_OBJ)
-	$(CC) $(CFLAGS) -o nuvoicp $^ $(LDFLAGS)
+	$(CC) $(CFLAGS) -o nuvoicp $^
 shared: main.o icp.o $(DEV_OBJ)
-	$(CC) $(CFLAGS) -shared -o libnuvoicp.so $^ $(LDFLAGS)
-	mv libnuvoicp.so ../nuvoispy/
+	$(CC) $(CFLAGS) -shared -o libnuvoicp-stub.so $^
+test: itest.o icp.o $(DEV_OBJ)
+	$(CC) $(CFLAGS) -o itest $^
 clean:
-	rm -f nuvoicp *.o libnuvoicp-*.so
+	rm -f nuvoicp *.o libnuvoicp-*.so itest
