fix bugs in arduino bridge

--- a/bootloader/Makefile
+++ b/bootloader/Makefile
@@ -4,7 +4,7 @@
 # ------------------------------------------------------
 
 INCDIR  = inc
-INCDIR2 = ../nuvoicp/common
+EXTRAINCDIRS = ../nuvoicp/common
 MODEL  = small
 DEFS = -DFOSC_166000
 
@@ -34,8 +34,10 @@ CTOASM = $(addprefix $(OUTDIR)/, $(C_TO_ASM_FILE))
 CC = sdcc
 MCU_MODEL = mcs51
 
-CFLAGS = -I$(INCDIR) -I$(INCDIR2) -m$(MCU_MODEL) --model-$(MODEL) --out-fmt-ihx --no-xinit-opt $(DEFS) --peep-file peep.def
+CFLAGS = -D__SDCC__=1 -I$(INCDIR) -m$(MCU_MODEL) --model-$(MODEL) --out-fmt-ihx --no-xinit-opt $(DEFS) --peep-file peep.def
 CFLAGS+= --code-size 2048 --opt-code-size --fomit-frame-pointer --peep-asm --peep-return --std-c11 --acall-ajmp
+CFLAGS += $(patsubst %,-I%,$(EXTRAINCDIRS))
+
 LFLAGS = --code-size 2048 -m$(MCU_MODEL) --model-$(MODEL) --out-fmt-ihx $(DEFS)
 
 # ------------------------------------------------------
