rename icp and pgm to n51_icp and n51_pgm

--- a/nuvoicp/Makefile
+++ b/nuvoicp/Makefile
@@ -7,11 +7,11 @@ DEV_OBJ = stub.o
 default: all
 
 all: nuvoicp shared
-nuvoicp: main.o icp.o $(DEV_OBJ)
+nuvoicp: main.o n51_icp.o $(DEV_OBJ)
 	$(CC) $(CFLAGS) -o nuvoicp $^
-shared: main.o icp.o $(DEV_OBJ)
+shared: main.o n51_icp.o $(DEV_OBJ)
 	$(CC) $(CFLAGS) -shared -o libnuvoicp-stub.so $^
-test: itest.o icp.o $(DEV_OBJ)
+test: itest.o n51_icp.o $(DEV_OBJ)
 	$(CC) $(CFLAGS) -o itest $^
 clean:
 	rm -f nuvoicp *.o libnuvoicp-*.so itest
