--- a/nuvo51icp/Makefile
+++ b/nuvo51icp/Makefile
@@ -6,12 +6,12 @@ DEV_OBJ = stub.o
 
 default: all
 
-all: nuvoicp shared
-nuvoicp: main.o n51_icp.o $(DEV_OBJ)
-	$(CC) $(CFLAGS) -o nuvoicp $^
+all: nuvo51icp shared
+nuvo51icp: main.o n51_icp.o $(DEV_OBJ)
+	$(CC) $(CFLAGS) -o nuvo51icp $^
 shared: main.o n51_icp.o $(DEV_OBJ)
-	$(CC) $(CFLAGS) -shared -o libnuvoicp-stub.so $^
+	$(CC) $(CFLAGS) -shared -o libnuvo51icp-stub.so $^
 test: itest.o n51_icp.o $(DEV_OBJ)
 	$(CC) $(CFLAGS) -o itest $^
 clean:
-	rm -f nuvoicp *.o libnuvoicp-*.so itest
+	rm -f nuvo51icp *.o libnuvo51icp-*.so itest
